feat(print-dialog): add translation

--- a/src/app/shared/components/print-dialog/print-dialog.component.html
+++ b/src/app/shared/components/print-dialog/print-dialog.component.html
@@ -1,18 +1,18 @@
 <section class="print-dialog">
   <div class="print-dialog__config-section">
-    <h3 class="print-dialog__title">Configurations</h3>
-    <ubuntu-container [title]="'File path'">
+    <h3 class="print-dialog__title">{{'PAGES.PDF_EXPORT.CONFIGURATIONS' | translate}}</h3>
+    <ubuntu-container [title]="'PAGES.PDF_EXPORT.PATH' | translate">
       <div class="print-dialog__section">
         <span class="print-dialog__path"
               [matTooltipClass]="'mat-tooltip--long-text'"
               [matTooltip]="saveDirectoryPath">
           {{saveDirectoryPath}}
         </span>
-        <button mat-button class="button button__edit" (click)="onEditFilePath()">Edit</button>
+        <button mat-button class="button button__edit" (click)="onEditFilePath()">{{'DIALOG.BUTTONS.CHANGE' | translate}}</button>
       </div>
     </ubuntu-container>
 
-    <ubuntu-container [title]="'Order and visibility'">
+    <ubuntu-container [title]="'PAGES.PDF_EXPORT.ORDER_AND_VISIBILITY' | translate">
       <div class="print-dialog__section print-dialog__section--small">
         <div cdkDropList class="columns" (cdkDropListDropped)="drop($event)">
           <div class="print-dialog__column-container" *ngFor="let column of columns" cdkDrag>
@@ -30,8 +30,8 @@
       </div>
     </ubuntu-container>
     <div class="print-dialog__buttons">
-      <button class="button button__cancel" mat-button (click)="dialogRef.close()">Cancel</button>
-      <button class="button button__submit" mat-button (click)="onPrint()">Export</button>
+      <button class="button button__cancel" mat-button (click)="dialogRef.close()">{{'DIALOG.BUTTONS.CANCEL' | translate}}</button>
+      <button class="button button__submit" mat-button (click)="onPrint()">{{'DIALOG.BUTTONS.EXPORT' | translate}}</button>
     </div>
   </div>
 
@@ -40,7 +40,7 @@
   </mat-divider>
 
   <div class="print-dialog__preview-section">
-    <h3 class="print-dialog__title">Preview (A4)</h3>
+    <h3 class="print-dialog__title">{{'PAGES.PDF_EXPORT.PREVIEW' | translate}}</h3>
     <div class="print-dialog__preview">
       <app-preview-page #print
                         [config]="config"
