--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,7 +23,6 @@ html, body {
   &-settings,
   &-notes {
     .mat-dialog-container {
-      height: 600px;
       width: 600px;
       padding: 0;
 
@@ -34,10 +33,18 @@ html, body {
 
   &-settings {
     max-height: 80%;
+
+    .mat-dialog-container {
+      height: auto;
+    }
   }
 
   &-print {
     height: 600px;
+
+    .mat-dialog-container {
+      background-color: #f7f7f7;
+    }
   }
 }
 
