--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -21,7 +21,7 @@
       <div class="card">
         <div class="card__title">{{"PAGES.DETAIL.OVERALL_EXPENSE" | translate}}</div>
         <div class="card__stat">
-          <span>{{costSum | numberSeparator:settingsService.settings.region}}</span>
+          <span>{{costSum | numberSeparator}}</span>
           <app-currency [currency]="settingsService.settings.units?.currency"
                         [locale]="settingsService.settings.region">
           </app-currency>
