fix(preview-page): currency error

--- a/src/app/shared/components/print-dialog/preview-page/preview-page.component.html
+++ b/src/app/shared/components/print-dialog/preview-page/preview-page.component.html
@@ -16,7 +16,7 @@
       <app-currency [locale]="settingsService.settings.region"
                     [renderAs]="1"
                     [size]="0"
-                    [currency]="settingsService.settings.units.currency">
+                    [currency]="settingsService.settings.units?.currency">
       </app-currency>
     </div>
   </div>
