--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -1,13 +1,16 @@
 <div class="detail">
   <div class="detail__title-container">
     <div class="detail__title">
-      {{name}}
+      <button mat-button class="detail__add-button" routerLink="/category-details/{{parentId}}">
+        <mat-icon>account_tree</mat-icon>
+      </button>
+      <span class="detail__title-text">{{name}}</span>
     </div>
     <div class="detail__buttons">
       <button class="detail__add-button" mat-button (click)="onCreateRecord()">
         <mat-icon>add</mat-icon>
       </button>
-      <button class="detail__add-button" mat-button (click)="onPrint()">
+      <button *ngIf="dataSourceTable.length" class="detail__add-button" mat-button (click)="onPrint()">
         <mat-icon>picture_as_pdf</mat-icon>
       </button>
     </div>
@@ -21,7 +24,7 @@
       <div class="card">
         <div class="card__title">{{"PAGES.DETAIL.OVERALL_EXPENSE" | translate}}</div>
         <div class="card__stat">
-          <span>{{costSum | numberSeparator}}</span>
+          <span>{{costSum | numberSeparator:this.settingsService.settings.region}}</span>
           <app-currency [currency]="settingsService.settings.units?.currency"
                         [locale]="settingsService.settings.region">
           </app-currency>
