--- a/src/app/detail/detail.component.scss
+++ b/src/app/detail/detail.component.scss
@@ -14,9 +14,15 @@
 
   &__title {
     font-family: Ubuntu;
-    font-size: 24px;
     color: white;
-    font-weight: 100;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+  }
+
+  &__title-text {
+    font-size: 24px;
+    line-height: 25px;
   }
 
   &__buttons {
