--- a/src/app/navigation/categories-tree/categories-tree.component.scss
+++ b/src/app/navigation/categories-tree/categories-tree.component.scss
@@ -1,13 +1,9 @@
+@use '/src/mixins' as mixins;
+
 :host {
   display: block;
   padding: 12px 0;
-
-  overflow-y: overlay;
-
-  &:hover::-webkit-scrollbar-thumb {
-    background-color: #cdcdcdb3;
-    transition: background-color 0.1s ease-in;
-  }
+  @include mixins.scrollable;
 }
 
 .categories-tree {
