--- a/src/app/shared/components/print-dialog/print-dialog.component.scss
+++ b/src/app/shared/components/print-dialog/print-dialog.component.scss
@@ -1,3 +1,5 @@
+@use '/src/mixins' as mixins;
+
 .print-dialog {
   font-family: Ubuntu;
   display: flex;
@@ -43,6 +45,13 @@
     display: flex;
     flex-direction: column;
     width: 50%;
+    overflow: hidden;
+  }
+
+  &__scroll {
+    @include mixins.scrollable;
+
+    padding-bottom: 16px;
   }
 
   &__divider {
@@ -68,6 +77,33 @@
     gap: 8px;
     justify-content: flex-end;
     margin-top: auto;
+    padding-top: 24px;
+  }
+
+
+  &__toggle.mat-checked {
+    ::ng-deep .mat-slide-toggle-bar {
+      background-color: #ff9069;
+    }
+    ::ng-deep .mat-slide-toggle-thumb {
+      background-color: #e95420;
+    }
+  }
+
+  .mat-button-toggle-checked {
+    background: #e95420;
+    line-height: initial;
+    color: white;
+  }
+
+  .mat-button-toggle-label-content {
+    line-height: 36px;
+    font-size: 14px;
+    font-family: Ubuntu;
+  }
+
+  .mat-button-toggle-button {
+    width: 104px;
   }
 }
 
