--- a/src/app/shared/components/records-table/records-table.component.scss
+++ b/src/app/shared/components/records-table/records-table.component.scss
@@ -1,6 +1,6 @@
 .records-table {
   font-family: Ubuntu;
-  overflow-y: auto;
+  overflow-y: overlay;
 
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 4px;
