--- a/src/app/shared/components/release-notes/release-notes.component.scss
+++ b/src/app/shared/components/release-notes/release-notes.component.scss
@@ -40,7 +40,7 @@
     display: flex;
     flex-direction: column;
     padding: 32px;
-    overflow: auto;
+    overflow: overlay;
   }
 
   &__section-title {
