--- a/src/styles.scss
+++ b/src/styles.scss
@@ -112,15 +112,15 @@ body.no-animations {
 }
 
 ::-webkit-scrollbar {
-  width: 4px;
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
+  border: 2px solid transparent;
+  background-clip: padding-box;
   background-color: transparent;
-  transition: all 0.1s ease-in;
-  border-radius: 2px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #cdcdcd;
 }
