--- a/src/styles.scss
+++ b/src/styles.scss
@@ -110,3 +110,17 @@ body.no-animations {
     transition: none !important;
   }
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  border: 2px solid transparent;
+  background-clip: padding-box;
+  background-color: transparent;
+}
