--- a/src/app/welcome-page/welcome-page.component.scss
+++ b/src/app/welcome-page/welcome-page.component.scss
@@ -1,3 +1,5 @@
+@import '/src/colors';
+
 .welcome-page {
   height: 100%;
   display: flex;
@@ -24,7 +26,7 @@
   &__title {
     font-size: 64px;
     margin-bottom: 16px;
-    color: #111;
+    color: $font-primary;
   }
 
   &__sub-title {
