--- a/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.scss
+++ b/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.scss
@@ -1,3 +1,5 @@
+@import '/src/colors';
+
 :host {
   display: block;
 }
@@ -51,7 +53,7 @@
     transition: background-color 0.1s linear;
 
     &:hover {
-      color: #111;
+      color: $font-primary;
       background: rgba(0,0,0,0.05);
     }
 
@@ -94,7 +96,7 @@
   .menu-button {
     visibility: hidden;
     margin-left: auto;
-    color: #111;
+    color: $font-primary;
   }
 }
 
