--- a/src/app/shared/components/delete-dialog/delete-dialog.component.scss
+++ b/src/app/shared/components/delete-dialog/delete-dialog.component.scss
@@ -1,3 +1,5 @@
+@import '/src/colors';
+
 .delete-dialog {
 
   &__header {
@@ -42,7 +44,7 @@
   .button {
     font-family: Ubuntu;
     font-weight: normal;
-    color: #111;
+    color: $font-primary;
   }
   
   .button__submit {
