--- a/src/app/shared/components/feedback-dialog/feedback-dialog.component.scss
+++ b/src/app/shared/components/feedback-dialog/feedback-dialog.component.scss
@@ -1,3 +1,5 @@
+@import '/src/colors';
+
 .feedback-dialog {
   font-family: "Ubuntu";
 
@@ -45,7 +47,7 @@
       }
 
       mat-label {
-        color: #111;
+        color: $font-primary;
         font-weight: lighter;
         font-size: 20px;
       }
@@ -100,7 +102,7 @@
 .button {
   font-family: Ubuntu;
   font-weight: normal;
-  color: #111;
+  color: $font-primary;
 }
 
 .button__submit {
