--- a/src/app/shared/components/print-dialog/preview-page/preview-page.component.scss
+++ b/src/app/shared/components/print-dialog/preview-page/preview-page.component.scss
@@ -1,3 +1,5 @@
+@import '/src/colors';
+
 .preview-page {
   width: 100%;
   padding: 18px;
@@ -102,7 +104,7 @@
     }
 
     th {
-      color: #111;
+      color: $font-primary;
     }
 
     tr {
