--- a/src/app/shared/components/settings/settings.component.scss
+++ b/src/app/shared/components/settings/settings.component.scss
@@ -1,4 +1,5 @@
 @use '/src/mixins' as mixins;
+@import '/src/colors';
 
 .settings {
   height: 100%;
@@ -114,7 +115,7 @@
 
     font-family: Ubuntu;
     font-weight: normal;
-    color: #111;
+    color: $font-primary;
     background-color: rgb(252, 252, 252);
     border: 1px solid rgb(196,196,196);
   }
