feat(app): add color theme

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -1,4 +1,5 @@
-$color-primary: #e95420;
+$color-primary: var(--primary-color);
+$color-secondary: var(--secondary-color);
 $color-dangerous: #c7162b;
 
 $font-primary: #111;
