refactor(app): font primary color

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -2,7 +2,7 @@ $color-primary: var(--primary-color);
 $color-secondary: var(--secondary-color);
 $color-dangerous: #c7162b;
 
-$font-primary: #111;
+$font-primary: #3c3a3a;
 $font-secondary: #7f7f7f;
 $font-white: white;
 
