refactor(app): border styles

--- a/src/app/detail/detail.component.scss
+++ b/src/app/detail/detail.component.scss
@@ -36,6 +36,7 @@
     min-width: initial;
     padding: 0 8px;
 
+    border-radius: 8px;
     font-family: Ubuntu;
     font-weight: normal;
     background-color: rgb(75,72,72);
