--- a/src/app/shared/components/settings/settings.component.scss
+++ b/src/app/shared/components/settings/settings.component.scss
@@ -61,6 +61,10 @@
     }
   }
 
+  &__toggle-group {
+    border-radius: 8px !important;
+  }
+
   &__item {
     display: flex;
     height: 64px;
@@ -113,6 +117,7 @@
     padding: 0 12px;
     min-width: initial;
 
+    border-radius: 8px;
     font-family: Ubuntu;
     font-weight: normal;
     color: $font-primary;
