refactor(app): font

--- a/src/app/shared/components/create-record/create-record.component.scss
+++ b/src/app/shared/components/create-record/create-record.component.scss
@@ -9,6 +9,7 @@
     align-items: center;
     justify-content: space-between;
 
+    font-family: "Ubuntu";
     background-color: rgb(50, 48, 48);
   }
 
