--- a/src/app/shared/components/records-table/records-table.component.scss
+++ b/src/app/shared/components/records-table/records-table.component.scss
@@ -43,6 +43,14 @@
     flex: 0 0 48px;
   }
 
+  &__note-icon {
+    height: 20px;
+    width: 20px;
+
+    font-size: 20px;
+    color: #3c3a3a;
+  }
+
   &__cell-mileage {
     flex: 0 0 84px;
   }
