feat(app): implement widget component

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -1,10 +1,12 @@
 $color-primary: var(--primary-color);
 $color-secondary: var(--secondary-color);
 $color-dangerous: #c7162b;
+$color-border: #bfbfbf;
 
 $font-primary: #111;
-$font-secondary: #7f7f7f;
+$font-secondary: #3c3a3a;
 $font-white: white;
+
 
 $background-primary: white;
 $background-secondary: #f7f7f7;
