--- a/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.html
+++ b/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.html
@@ -1,7 +1,13 @@
 <div class="categories-tree-node">
+  <div style="visibility: hidden; position: fixed"
+       [style.left]="contextMenuPosition.x"
+       [style.top]="contextMenuPosition.y"
+       [matMenuTriggerFor]="contextMenu">
+  </div>
   <div class="categories-tree-node__content"
        [class.categories-tree-node__content--select]="selected === child.id"
-       (click)="onSelect()">
+       (click)="onSelect()"
+       (contextmenu)="onContextMenu($event)">
     <div class="categories-tree-node__expand-button-container">
       <mat-icon class="categories-tree-node__expand-button"
                 [class.categories-tree-node__expand-button--expanded]="expand"
@@ -12,19 +18,18 @@
     </div>
     <div class="categories-tree-node__icon-container">
       <img class="categories-tree-node__icon"
-           [class.categories-tree-node__icon--mono]="settingsService.settings.appearance.type === IconTypeEnum.Mono"
-           *ngIf="!isSubNode"
-           [src]="iconsPath + (child.illustration || 'wrench.svg')">
+            [class.categories-tree-node__icon--mono]="settingsService.settings.appearance.type === IconTypeEnum.Mono"
+            *ngIf="!isSubNode"
+            [src]="iconsPath + (child.illustration || 'wrench.svg')">
     </div>
     <span class="categories-tree-node__name">
       {{child.name}}
     </span>
-    <mat-icon class="menu-button" [matMenuTriggerFor]="contextMenu" (click)="$event.stopPropagation()">more_horiz</mat-icon>
   </div>
   <ng-container>
     <div class="categories-tree-node__sub-node"
         [class.categories-tree-node__sub-node--expanded]="expand"
-        [style.height]="expand ? child.children.length * 50 + 'px' : 0">
+        [style.height]="expand ? child.children.length * 42 + 'px' : 0">
       <app-categories-tree-node *ngFor="let c of child.children"
                                 [selected]="selected"
                                 [isSubNode]="true"
@@ -40,12 +45,15 @@
 <mat-menu #contextMenu="matMenu">
   <ng-template matMenuContent>
       <button class="menu-item" mat-menu-item *ngIf="!child.parent" (click)="onAdd()">
+        <mat-icon class="mat-item__icon mat-item__icon--add">add</mat-icon>
         <span>{{"MENU.ADD" | translate}}</span>
       </button>
       <button class="menu-item" mat-menu-item (click)="onEdit()">
+        <mat-icon>edit</mat-icon>
         <span>{{"MENU.EDIT" | translate}}</span>
       </button>
-      <button class="menu-item" mat-menu-item (click)="onDelete()">
+      <button class="menu-item menu-item--delete" mat-menu-item (click)="onDelete()">
+        <mat-icon class="mat-item__icon mat-item__icon--delete">delete</mat-icon>
         <span>{{"MENU.DELETE" | translate}}</span>
       </button>
   </ng-template>
